# judgment

./: Cargo.toml  LICENSE
judgment/: Cargo.toml
judgment-client/: Cargo.toml  index.html  style.css
judgment-client/src/: app.rs  lib.rs  main.rs  player.rs  scores.rs  trick.rs
judgment-server/: Cargo.toml
judgment-server/src/: errors.rs  lib.rs  room.rs  server.rs
judgment/src/: errors.rs  lib.rs  player.rs
