[package]
name = "judgment-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
card-deck = { git = "https://github.com/scimas/card-deck.git", tag = "v0.1.1", version = "0.1.1", features = [
    "standard-deck",
    "serde",
] }
either = { version = "1.9.0", features = ["serde"] }
getrandom = { version = "0.2.10", features = ["js"] }
gloo-console = "0.3.0"
gloo-dialogs = "0.2.0"
gloo-net = "0.4.0"
judgment = { version = "0.1.0", path = "../judgment", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.46"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
yew = { version = "0.20.0", features = ["csr"] }
