[package]
name = "judgment-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
card-deck = { git = "https://github.com/scimas/card-deck.git", tag = "v0.1.1", version = "0.1.1", features = [
    "standard-deck",
    "serde",
] }
judgment = { version = "0.1.0", path = "../judgment", features = ["serde"] }
log = "0.4.20"
pasetors = { version = "0.6.7", default-features = false, features = [
    "v4",
    "std",
] }
rand = "0.8.5"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.46"
tokio = { version = "1.31.0", features = ["macros"] }
tower-http = { version = "0.4.3", features = ["fs"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
