[package]
name = "judgment"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
card-deck = { git = "https://github.com/scimas/card-deck.git", tag = "v0.2.2", version = "0.2.2", features = [
    "standard-deck",
] }
rand = "0.8.5"
rand_chacha = "0.3.1"
# https://github.com/serde-rs/serde/issues/2538
# https://github.com/serde-rs/serde/releases/tag/v1.0.184
serde = { version = "1.0.184", features = ["derive"], optional = true }
thiserror = "1.0.44"

[features]
serde = ["dep:serde", "card-deck/serde"]
